Temporary fix for card text overflowing on firefox

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -384,6 +384,7 @@ a:hover {
 .card-text {
   height: 150px;
   color: black;
+  overflow: hidden;
 }
 
 .card-top {
